syntax = "proto3";

option go_package = "proto/";

import "google/protobuf/empty.proto";

message Job {
  string id = 1;
  string name = 2;
  string description = 3;
  string command = 4;
}

message Task {
  string id = 1;
  string job_id = 2;
  string agent_id = 3;
  TaskStatus status = 4;
  string result = 5;
}

enum TaskStatus {
  PENDING = 0;
  RUNNING = 1;
  COMPLETED = 2;
  FAILED = 3;
}

message AssignTaskRequest {
  Task task = 1;
  Job job = 2;
}

message AssignTaskResponse {
  bool accepted = 1;
  string message = 2;
}

message JobStatusRequest {
  string job_id = 1;
}

message JobStatusResponse {
  string job_id = 1;
  TaskStatus status = 2;
  string result = 3;
}

message ScriptChecksum {
  string filename = 1;
  string checksum = 2;
}

message ChecksumResponse {
  repeated ScriptChecksum scripts = 1;
}

message FileContent {
  string filename = 1;
  bytes content = 2;
}

message SyncStatus {
  bool success = 1;
  string message = 2;
}

message DeleteScriptRequest {
  string filename = 1;
}

message HeartbeatRequest {
  string agent_id = 1;
  string message = 2;
}
message HeartbeatResponse {
  bool ok = 1;
}

message RegisterAgentResponse {
  string id = 1;
  string token = 2;
}

// Service for agent communication
service AgentService {
  // Tasks
  rpc AssignTask (AssignTaskRequest) returns (AssignTaskResponse);
  rpc ReportTaskStatus (JobStatusRequest) returns (JobStatusResponse);
  
  // Scripts
  rpc GetScriptChecksums(google.protobuf.Empty) returns (ChecksumResponse);
  rpc SendScriptFile(FileContent) returns (SyncStatus);
  rpc DeleteScriptFile(DeleteScriptRequest) returns (SyncStatus);

  // Agents
  rpc TryAgentAddress(google.protobuf.Empty) returns (google.protobuf.Empty);
}

// Service for manager communication
service ManagerService {
  rpc RegisterAgent(google.protobuf.Empty) returns (RegisterAgentResponse);
  rpc UnregisterAgent(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}